--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".HomePage_Activity" />
-        <activity android:name=".EventsPage_Activity">
+        <activity android:name=".EventsPage_Activity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".HomePage_Activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            tools:ignore="DuplicateActivity" />
+
+
     </application>
 
 </manifest>
