--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="project.graduation.atturaif_application">
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,26 +11,35 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
-
-        <activity android:name=".EventsPage_Activity"></activity>
-
-        <activity android:name=".Payment_Activity"></activity>
+        <activity android:name=".VR_page">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomePage_Activity" />
+        </activity>
+        <activity android:name=".SittingPage">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomePage_Activity" />
+        </activity>
+        <activity android:name=".BasicActivity" />
+        <activity android:name=".Language_page" />
+        <activity android:name=".EventsPage_Activity" />
+        <activity android:name=".Payment_Activity" />
         <activity android:name=".CheckPhoneCode_Activity" />
         <activity android:name=".CheckNumber_Activity" />
-        <activity android:name=".Booking_Activity"></activity>
-
-        <activity android:name=".MainActivity" />
-        <activity android:name=".HomePage_Activity">
-
+        <activity android:name=".Booking_Activity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".HomePage_Activity" />
+        </activity>
+        <activity android:name=".Splash_page">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
+        <activity android:name=".HomePage_Activity" />
     </application>
 
 </manifest>
