--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:26.+'
+    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
+
 
 
 }
