--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.0"
+    buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "project.graduation.atturaif_application"
         minSdkVersion 23
@@ -22,7 +22,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -32,11 +32,12 @@ dependencies {
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-database:19.0.0'
+    implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.google.firebase:firebase-auth:19.0.0'
-    implementation 'com.google.firebase:firebase-firestore:21.0.0'
+    implementation 'com.google.firebase:firebase-firestore:21.1.0'
     implementation 'com.firebaseui:firebase-ui-database:0.4.0'
-    implementation 'com.google.firebase:firebase-storage:19.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
     testImplementation 'junit:junit:4.12'
     implementation 'com.craftman.cardform:cardform:0.0.2'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -54,6 +55,7 @@ dependencies {
     implementation 'com.android.support:design:26.+'
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.mikhaellopez:circularprogressbar:3.0.2'
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 
 
 }
