--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".phone_Authentication.Enter_phone_page" />
+        <activity android:name=".phone_Authentication.Enter_code_page" />
+
+
     </application>
 
 </manifest>
