--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -24,7 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.github.prolificinteractive:material-calendarview:2.0.0'
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.braintreepayments:card-form:4.2.0'
@@ -56,7 +57,7 @@ dependencies {
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.mikhaellopez:circularprogressbar:3.0.2'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
-
+    implementation 'com.github.florent37:shapeofview:1.3.2'
 
 
 }
