--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'com.mikhaellopez:circularprogressbar:3.0.2'
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.github.florent37:shapeofview:1.3.2'
+    implementation 'com.github.smarteist:autoimageslider:1.3.2'
 
 
 }
