--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,13 +11,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Save_Ticket"></activity>
+        <activity android:name=".Billing_Contact" />
         <activity android:name=".InternetChecking">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomePage_Activity" />
         </activity>
         <activity android:name=".shopdays_item" />
-
         <activity android:name=".shopDetails">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -77,5 +78,7 @@
     </application>
 
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
