--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/iconlogo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/iconlogo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        tools:replace="android:icon"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".Payment"></activity>
         <activity android:name=".InternetChecking">
@@ -22,7 +23,7 @@
             android:parentActivityName=".Billing_Contact" />
         <activity
             android:name=".Billing_Contact"
-            android:parentActivityName=".Payment_Activity" />
+            android:parentActivityName=".Payment" />
         <activity android:name=".shopdays_item" />
         <activity android:name=".shopDetails">
             <meta-data
