--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     implementation 'com.kofigyan.stateprogressbar:stateprogressbar:1.0.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.github.rubensousa:gravitysnaphelper-compat:2.0'
+    implementation 'com.github.florent37:shapeofview:1.3.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
