--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir {
+            dirs "${project(':unityLibrary').projectDir}/libs"
+        }
         maven { url 'https://jitpack.io'}
         google()
         jcenter()
