--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/AppTheme"
         tools:replace="android:icon"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Payment"></activity>
+        <activity android:name=".Payment" />
         <activity android:name=".InternetChecking">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
