--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ configurations.all {exclude group: 'bitter.jnibridge.JNIBridge$a', module: 'bitt
 
 dependencies {
 
-
+    implementation project(':unityLibrary')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
