--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
 include ':app'
 
-
+include ':unityLibrary'
+project(':unityLibrary').projectDir=new File("C:\\Users\\renad\\Desktop\\LipSyncmastr\\AR_V20\\androidBuild\\unityLibrary")
