--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,9 @@ buildscript {
 allprojects {
     repositories {
 
-        
+        flatDir {
+            dirs "${project(':unityLibrary').projectDir}/libs"
+        }
 
         maven { url 'https://jitpack.io'}
         google()
