--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,11 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-
-
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "project.graduation.atturaif_application"
-        minSdkVersion 27
+        minSdkVersion 25
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -22,20 +20,20 @@ android {
     }
 
     packagingOptions {
-        merge 'lib/armeabi-v7a/libmain.so'
-        merge 'lib/x86/libmain.so'
-        merge 'lib/armeabi-v7a/libunity.so'
-        merge 'lib/x86/libunity.so'
-        merge 'lib/armeabi-v7a/libmono.so'
-        merge 'lib/x86/libmono.so'
+        pickFirst 'lib/armeabi-v7a/libmain.so'
+        pickFirst 'lib/armeabi-v7a/libmono.so'
+        pickFirst 'lib/armeabi-v7a/libunity.so'
+        pickFirst 'lib/x86/libmain.so'
+        pickFirst 'lib/x86/libmain.so'
+        pickFirst 'lib/x86/libmain.so'
     }
 
+
 }
-configurations.all {exclude group: 'bitter.jnibridge.JNIBridge$a', module: 'bitter.jnibridge.JNIBridge$a'}
 
 dependencies {
-
     implementation project(':unityLibrary')
+    implementation fileTree(dir: project(':unityLibrary').getProjectDir().toString() + ('\\libs'), include: ['*.jar'])
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -78,6 +76,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.2.1'
     implementation 'com.github.rubensousa:gravitysnaphelper-compat:2.0'
     implementation 'com.github.florent37:shapeofview:1.3.0'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
