--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 include ':app'
 
+
 include ':unityLibrary'
-project(':unityLibrary').projectDir=new File("C:\\Users\\renad\\Desktop\\LipSyncmastr\\AR_V20\\androidBuild\\unityLibrary")
+project(':unityLibrary').projectDir=new File('C:\\Users\\renad\\Desktop\\LipSyncmastr\\AR_V20\\androidBuild\\unityLibrary')
