--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,13 @@
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/iconlogo"
@@ -18,7 +25,12 @@
         <activity android:name=".Payment" />
 
 
-
+        <activity android:name=".Splash_page">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
         <activity
@@ -82,13 +94,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomePage_Activity" />
         </activity>
-        <activity android:name=".Splash_page">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity android:name=".phone_Authentication.Enter_phone_page" />
         <activity android:name=".phone_Authentication.Enter_code_page" /> <!-- fcm -->
         <service android:name=".MyFirebaseMessagingService">
